Desktop Testing Stuff

--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin-top: 40px;
 } 
@@ -102,26 +103,31 @@ nav {
 .logo-container {
   display: inline-block;
   min-width: 60px;
-  margin-left: 5%;
-  margin-right: 15%;
+  /* margin-left: 5%;
+  margin-right: 15%; */
 }
 
 nav ul {
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
-ul li {
-  position: relative;
+nav ul li {
+   position: relative;
    margin-right:40px;
 }
 
-ul li a {
+nav ul li:last-child{
+  margin:0;
+}
+
+nav ul li a {
  padding: 10px 5px;
 }
 
-ul li:hover .nav-hover,
-ul li:active .nav-hover {
+nav ul li:hover .nav-hover,
+nav ul li:active .nav-hover {
   display: block;
 }
 
@@ -138,8 +144,8 @@ ul li:active .nav-hover {
 
  .right-container {
   display: flex;
-  margin-right: 5%;
-  margin-left: 11%;
+  /* margin-right: 5%;
+  margin-left: 11%; */
   justify-content: space-between;
   align-items: center;
   font-weight: 400;
